--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^3.24.0",
     "@emotion/react": "^11.14.0",
     "@hookform/resolvers": "^5.2.1",
+    "moment": "^2.30.1",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
