--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^3.24.0",
     "@emotion/react": "^11.14.0",
     "@hookform/resolvers": "^5.2.1",
+    "@types/lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
@@ -20,6 +22,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "swr": "^2.3.4",
+    "uuid": "^11.1.0",
     "zod": "^4.0.14"
   },
   "devDependencies": {
